--- a/packages/common-sass/src/scss/_button.scss
+++ b/packages/common-sass/src/scss/_button.scss
@@ -41,6 +41,6 @@ button:disabled {
 }
 
 .btn-outline-secondary{
-  // border-color:rgba($gray-200,1);
-  color:$gray-900;
+  border-color:$gray-600;
+ color:$gray-700;
 }
