--- a/packages/common-sass/src/scss/custom-components/_hybrid-input.scss
+++ b/packages/common-sass/src/scss/custom-components/_hybrid-input.scss
@@ -42,10 +42,13 @@
 }
 
 .field-wrapper.myInput input:not([disable]) ~ .field-placeholder {
-  color: $cogent;
+  // color: $cogent;
+  color:$gray-700;
   -webkit-transform: scale(1) translateY(-20px) translateX(-6px);
   transform: scale(1) translateY(-20px) translateX(-6px);
-  font-size: 0.6rem;
+  font-size: 0.65rem;
+  font-weight: 500;
+  
 }
 
 .field-wrapper.errorInput input:not([disable]) ~ .field-placeholder {
@@ -56,7 +59,7 @@
   -webkit-transform: scale(1) translateY(-20px) translateX(-6px);
   transform: scale(1) translateY(-20px) translateX(-6px);
   font-size: 0.65rem;
-
+ font-weight: 400;
 }
 
 .field-wrapper .err-message {
@@ -84,7 +87,10 @@
   -webkit-transform: scale(1) translateY(-20px) translateX(-6px);
   transform: scale(1) translateY(-20px) translateX(-6px);
   font-size: 0.65rem;
+ 
 }
+
+
 
 .field-wrapper.errorInput textarea:not([disable]) ~ .field-placeholder {
   color: $red;
@@ -94,6 +100,7 @@
   -webkit-transform: scale(1) translateY(-20px) translateX(-6px);
   transform: scale(1) translateY(-20px) translateX(-6px);
   font-size: 0.6rem;
+  font-weight: 400;
 }
 
 .form-control:disabled{
