--- a/packages/common-sass/src/scss/custom-components/_hybrid-select.scss
+++ b/packages/common-sass/src/scss/custom-components/_hybrid-select.scss
@@ -1,7 +1,7 @@
 
 .select-wrapper{
   .select-label {
-    color: $body-color;
+    color: $gray-600 !important;
     position: absolute;
     top: -8px;
     left: 12px;
@@ -29,7 +29,8 @@
 
     //for disabled select
   .css-1fhf3k1-control{
-    background-color:$gray-100 !important;
+     background-color:$gray-100 !important;
+
 
       // cursor: not-allowed; 
    
