--- a/packages/common-sass/src/scss/variables/_custom-bootstrap-variable.scss
+++ b/packages/common-sass/src/scss/variables/_custom-bootstrap-variable.scss
@@ -448,7 +448,7 @@ $btn-link-disabled-color:     $gray-600 !default;
 $btn-block-spacing-y:         .5rem !default;
 
 // Allows for customizing button radius independently from global border radius
-$btn-border-radius:           4px ;
+$btn-border-radius:           $border-radius !default;
 $btn-border-radius-lg:        $border-radius-lg !default;
 $btn-border-radius-sm:        $border-radius-sm !default;
 
@@ -1134,4 +1134,6 @@ $positions: static, relative, absolute, fixed, sticky !default;
 $print-page-size:                   a3 !default;
 $print-body-min-width:              map-get($grid-breakpoints, "lg") !default;
 
-$cogent-border:$cogent-bg;
+// $cogent-border:$cogent-bg;
+
+$cogent-border:$gray-300;
