--- a/packages/ui-elements/src/CHybridSelect/hybrid-select.scss
+++ b/packages/ui-elements/src/CHybridSelect/hybrid-select.scss
@@ -4,7 +4,7 @@
     cursor: pointer;
   }
 .select-label {
-  color: #80868b;
+  // color: #80868b;
   position: absolute;
   top: -8px;
   left: 12px;
