--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -1,16 +1,104 @@
 .dashboard-wrapper{
     //padding:16px;
-    padding-top:20px;
+    padding-top:10px;
     margin-bottom:1.5rem;
 
     h5.title{
+        display: block;
         // color:desaturate($cogent,60%);
-        color:$gray-900;
-        margin-top:22px;
-        margin-bottom:22px;
+        // font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    // .revenue-title-box{
+    //     position: relative;
+
+    //     .fiscal{
+    //         position: absolute;
+    //         top:0;
+    //         left:0;
+    //     }
+
+    //     .title{
+    //         position: absolute;
+    //         top:12px;
+    //     }
+    // }
+
+    .fiscal{
+        font-size: 11px;
         font-weight: 500;
-        font-size: 18px;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        display: block;
+    }
+
+    .slash{
+        font-size:8px;
+    }
+
+    .hospital-list{
+        width:300px;
+        float:right;
+
+        .form-label{
+            padding-bottom: 0;
+            font-size: 11px;
+            margin-top:3px;
+            // line-height: 1.6;
+        }
+        .select-wrapper{
+            min-height: 34px;
+            margin-left:4px;
+
+            // .select-label.active {
+            //     color:$cogent;
+            //   }
+               
+          .css-yk16xz-control{
+           background-color:transparent;
+           border-bottom:1px solid $gray-500;
+           @include border-radius(0);
+
+           &:hover{
+               border:transparent !important;
+            border-bottom:1px solid $gray-500 !important;
+          }
+          }
+        
+          .css-1pahdxg-control{
+            border-color:transparent !important;
+            border-bottom:1px solid $gray-500 !important;
+            background-color:transparent;
+            @include border-radius(0);
+            &:hover{
+                border-color:transparent !important;
+                border-bottom:1px solid $gray-500 !important;
+            }
+          }
+        
+            //for disabled select
+          .css-1fhf3k1-control{
+            background-color:$gray-100 !important;
+        
+              // cursor: not-allowed; 
+           
+          }
+        
+          .css-1n7v3ny-option{
+            //background-color:#DEEBFF;
+            background-color: lighten($cogent,45%);
+          }
+        
+          .css-1wa3eu0-placeholder{
+            color:$gray-600;
+            font-weight: 300;
+        
+          } 
+        
+          
+        }
+
+        
+
+       
     }
 
     .unauthorized{
@@ -90,6 +178,7 @@
             background-color:lighten($cogent,10%);
             p{
                 color:$white;
+
             }
             .total{
                 color:$black;
@@ -131,6 +220,12 @@
             font-size: 22px;
             font-weight: 500;
             margin-bottom:0;
+
+            span{
+                margin-left:3px;
+                font-size: 10px;
+                font-weight: 400;
+            }
             
         }
 
@@ -141,10 +236,20 @@
 
             &.up{
                 color:$success;
+               
             }
 
             &.down{
                 color:$danger;
+            }
+
+            &.up,&.down{
+                span{
+                    // color:$gray-600;
+                    // margin-left:2px;
+                    // font-weight: 500;
+      
+                }
             }
             .fa-chevron-up{
                 color:$success;
