--- a/packages/apps/admin/src/container/DoctorDutyRoster/doctor-duty-roster.scss
+++ b/packages/apps/admin/src/container/DoctorDutyRoster/doctor-duty-roster.scss
@@ -47,7 +47,10 @@
            font-weight:400;
        }
        .field-wrapper{
-           min-height: 50px;
+           min-height: 20px;
+          .css-1hwfws3 {
+            padding: 0 0.8rem ;
+        }
        }
     }
 
@@ -137,6 +140,7 @@
      .time-picker{
          display: inline-block;
          width:50%;
+         padding-left:4px;
          .react-datepicker-wrapper{
             width:100%
         }
