--- a/packages/apps/admin/src/container/DepartmentDutyRoster/department-duty-roster.scss
+++ b/packages/apps/admin/src/container/DepartmentDutyRoster/department-duty-roster.scss
@@ -48,11 +48,11 @@
 
         .col {
             &:nth-child(1) {
-                flex-basis: 100px;
+                flex-basis: 70px;
                 flex-grow: 0;
                 text-overflow: ellipsis;
                 overflow: hidden;
-                max-width: 90px;
+               
             }
 
             &:nth-child(2),
@@ -67,20 +67,28 @@
                 flex-basis: 60px;
                 flex-grow: 0;
                 padding: 0;
+                padding-left:5px;
                 .form-check {
                     // padding-left: 8px !important;
                     // font-size: 11px;
                     // margin-right: 0;
                 }
+
+                .select-all{
+                    margin-left:15px;
+                }
                 .form-check.check-all .form-check-label{
                     margin-bottom:0;
-                     font-size: 11px;
+                    font-size: 11px;
+                    margin-left:-8px;
+
+                     
                 }
             }
 
             &:nth-child(5) {
-                width: calc(100% - 480px);
-                flex-basis: calc(100% - 480px);
+                width: calc(100% - 410px);
+                flex-basis: calc(100% - 410px);
                 flex-grow: 1;
             }
         }
@@ -98,11 +106,11 @@
         .col {
             &:nth-child(1) {
                 
-                flex-basis: 100px;
+                flex-basis: 70px;
                 flex-grow: 0;
                 text-overflow: ellipsis;
                 overflow: hidden;
-                max-width: 90px;
+               
             }
 
             &:nth-child(2),
@@ -117,12 +125,15 @@
                 padding:0 15px;
                 flex-basis: 60px;
                 flex-grow: 0;
-                
+                padding-left:20px;
+                .fa-check-circle {
+                    margin-left: -10px;
+                }
             }
 
             &:nth-child(5) {
-                width: calc(100% - 480px);
-                flex-basis: calc(100% - 480px);
+                width: calc(100% - 410px);
+                flex-basis: calc(100% - 410px);
                 flex-grow: 1;
 
                 .multiple-select {
@@ -214,6 +225,7 @@
         background-color: $gray-100;
         padding:2px;
         margin-bottom:2px;
+        @include border-radius(4px);
        
         li{
             display:flex;
@@ -292,6 +304,9 @@
     font-size: 16px;
     color: $success;
 }
+
+
+
 
 @media (max-width: 992px) {
     .info-container {
