--- a/packages/apps/client/src/container/ClientAppointCheckinQuickMenu/appointment-approval.scss
+++ b/packages/apps/client/src/container/ClientAppointCheckinQuickMenu/appointment-approval.scss
@@ -133,6 +133,50 @@
 
 }
 
+.search-bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding:0 50px;
+    margin-top:20px;
+    margin-bottom:20px;
+
+    .appt-search{
+        width:70%;
+        height: 42px;
+
+        .form-control{
+            height: 42px;
+            font-size: 0.9rem;
+            font-weight: 500;
+            letter-spacing: 0.5px;
+        }
+
+        .field-wrapper .field-placeholder{
+            font-size: 0.9rem;
+            font-weight: 500;
+
+            span{
+                font-size: 0.8rem;
+                font-weight: 500;
+              
+            @include border-radius(3px);
+            }
+        }
+
+
+
+    }
+
+    .btn-action{
+        width:calc(30% - 10px);
+        margin-left:10px;
+        height: 42px;
+        font-size: 0.9rem;
+        font-weight: 500;
+    }
+}
+
 
    
 
