--- a/packages/commons/src/print.scss
+++ b/packages/commons/src/print.scss
@@ -2,7 +2,7 @@
 .outPopUp {
   position: absolute;
   width: 300px;
-  height: 450px;
+  height: 550px;
   z-index: 15;
   padding:30px;
   top: 50%;
@@ -33,8 +33,11 @@ text-decoration:underline;
 
 .separtor{
 width:100%;
+margin:20px 0;
 border:1px dashed #000000;
 }
+
+
 
 .patient-detail p{
 font-size:15px;
